--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <form method="post" action="mailto:z.ju688@mybvc.ca">
     <p style="font-size: larger;">Please send your comments to us!</p>
+      <p style="font-size: larger;">My EMAIL ADDRESS IS z.ju688@mybvc.ca</p>
     <br>
     <div class="container">
       <form action="action_page.php">
